Fix board.css and rooms.css to the correct value (overflow-x to overflow-y). Delete default: false in password field in Room schema because creating a non passworded room was creating a password 'false' even though it would not cause problems getting in the room.

--- a/public/stylesheets/board.css
+++ b/public/stylesheets/board.css
@@ -27,7 +27,7 @@
 .messages {
     height: 70vh;
     flex-grow: 1;
-    overflow-x: auto;
+    overflow-y: scroll;
 }
 
 .message {
